--- a/src/components/templates/Description/style.css
+++ b/src/components/templates/Description/style.css
@@ -4,3 +4,9 @@
     background-color: var(--grey-2);
     position: relative;
 }
+
+.inner--description {
+    margin: 0 auto;
+    max-width: 1440px;
+    position: relative;
+}
