--- a/src/components/atoms/Input/style.css
+++ b/src/components/atoms/Input/style.css
@@ -6,6 +6,11 @@
     text-align: left;
 }
 
+.input:focus {
+    border: none;
+    outline: none;
+  }
+
 /* size */
 .input--small {
     width: 153px;
@@ -17,8 +22,8 @@
 }
 
 .input--large {
-    width: 659px;
-    height: 63px;
+    width: 660px;
+    height: 64px;
     border-radius: 65.9px;
     font-size: 25px;
     text-align: center;
@@ -31,7 +36,6 @@
 }
 
 /* color */
-
 .input--dark {
     background-color: var(--grey-2);
     color: var(--dark-1);
