add RWD to Subscribe component and fix issue in this component

--- a/src/components/atoms/BodyText/style.css
+++ b/src/components/atoms/BodyText/style.css
@@ -164,6 +164,12 @@
         font-size: 14.7px;
         padding-bottom: 58.8px;
     }
+
+    .bodyText_size--subscribe {
+        max-width: 890px;
+        font-size: 21px;
+        padding: 31.2px 0 47.4px 0;
+    }
   }
   
 
@@ -217,6 +223,12 @@
     .bodyText_size--quotation-author{
         font-size: 12.6px;
         padding-bottom: 49px;
+    }
+
+    .bodyText_size--subscribe {
+        max-width: 300px;
+        font-size: 18px;
+        padding: 26px 0 39.5px 0;
     }
 }
 
