--- a/src/components/atoms/Button/style.css
+++ b/src/components/atoms/Button/style.css
@@ -93,6 +93,13 @@
       font-size: 25px;
     }
 
+    .button--medium {
+      width: 148.4px;
+      height: 52.8px;
+      font-size: 17.5px;
+      border-radius: 17.84px;
+    }
+
     .button--large {
       width: 267.2px;
       height: 68.8px;
@@ -108,6 +115,13 @@
       height: 32.9px;
       border-radius: 15.26px;
       font-size: 15px;
+    }
+
+    .button--medium {
+      width: 126px;
+      height: 46.2px;
+      font-size: 15px; 
+      border-radius: 15.6px;
     }
 
     .button--large {
