--- a/src/components/atoms/Input/style.css
+++ b/src/components/atoms/Input/style.css
@@ -22,7 +22,7 @@
 }
 
 .input--large {
-    width: 660px;
+    width: 100%;
     height: 64px;
     border-radius: 65.9px;
     font-size: 25px;
@@ -61,4 +61,20 @@
     opacity: 0.68;
     text-align: left;
     padding-left: 36px;
+}
+
+@media only screen and (min-width:321px) and (max-width: 768px) {
+    .input--large {
+        height: 50.8px;
+        border-radius: 30px;
+        font-size: 17.5px;
+    }
+}
+
+@media only screen and (max-width: 320px) {
+    .input--large {
+        height: 44.2px;
+        border-radius: 26.4px;
+        font-size: 15px;
+    }
 }
