--- a/src/components/templates/Subscribe/style.css
+++ b/src/components/templates/Subscribe/style.css
@@ -11,3 +11,22 @@
     margin-right: auto;
     padding: 217px 0 231px 0;
 }
+
+@media only screen and (min-width:321px) and (max-width: 768px) {
+    .inner-subscribe{
+        max-width: 1440px;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 130.2px 10px 138.6px 10px;
+    }
+}
+
+
+@media only screen and (max-width: 320px) {
+    .inner-subscribe{
+        max-width: 1440px;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 108.5px 10px 115.5px 10px;
+    }
+}
