--- a/src/_settings_/_variables.css
+++ b/src/_settings_/_variables.css
@@ -6,6 +6,7 @@
     --dark-1: #54524f;
     --dark-2: #3f3f3f;
     --dark-3: #333d42;
+    --dark-4: #888888;
     --creamy-1:#deb37e;
     --creamy-2:#e2a355;
   }
