--- a/src/components/atoms/Button/style.css
+++ b/src/components/atoms/Button/style.css
@@ -13,7 +13,6 @@
   .button:focus {
     border: none;
     outline: none;
-    transform: scale(1);
   }
 
   .button:hover {
@@ -26,7 +25,7 @@
   .button--verySmall {
     width: 120px;
     height: 120px;
-    border: 10px solid var(--dark-4);
+    border: 10px solid!important;
     transition: all 1s ease;
   }
 
@@ -82,6 +81,7 @@
 
   .button--transparent {
     background-color: transparent;
+    border-color: var(--dark-4)!important;
   }
 
   /* position */
