--- a/src/components/atoms/Icon/style.css
+++ b/src/components/atoms/Icon/style.css
@@ -4,7 +4,7 @@
     cursor: pointer;
 }
 
-.icon-small {
+.icon--small {
     font-size: 25px!important;
 }
 
@@ -21,14 +21,15 @@
 }
 
 @media only screen and (min-width:321px) and (max-width: 768px) {
-    .icon-small {
+    .icon--small {
         font-size: 17.5px!important;
     }
 }
 
 
 @media only screen and (max-width: 320px) {
-    .icon-small {
+    .icon--small {
         font-size: 15px!important;
     }
 }
+
