--- a/src/components/organisms/Discount/style.css
+++ b/src/components/organisms/Discount/style.css
@@ -26,5 +26,6 @@
 @media only screen and (max-width: 768px) {
     .wrapper--discount > div > div:first-child {
         padding-left: 10px;
+        padding-right: 10px;
     }
 }
