--- a/src/components/atoms/Button/style.css
+++ b/src/components/atoms/Button/style.css
@@ -136,6 +136,13 @@
       border-radius: 20.04px;
       margin: 0 auto;
     }
+
+    .button--verySmall {
+      width: 72px;
+      height: 72px;
+      border: 6px solid!important;
+      transition: all 1s ease;
+    }
   }
 
   @media only screen and (max-width: 768px) {
@@ -159,5 +166,21 @@
       font-size: 20.3px;
       border-radius: 23.38px;
       margin: 0 auto;
+    }
+
+    .button--verySmall {
+      width: 84px;
+      height: 84px;
+      border: 7px solid!important;
+      transition: all 1s ease;
+    }
+
+    .button--ScrollPosition {
+      bottom: 10px;
+      right: 10px;
+    }
+
+    .button--transparent {
+      border-color: var(--dark-4)!important;
     }
   }
